Codigo/y.output
Terminals unused in grammar

   OP_KEY
   CL_KEY
   DIGITO
   CARACTER
   COMMENT


Gramática

    0 $accept: programa $end

    1 programa: main

    2 main: bloque

    3 bloque: sentencia
    4       | bloque sentencia

    5 sentencia: while
    6          | while_especial
    7          | if
    8          | for
    9          | asignacion OP_ENDLINE
   10          | declaracion_var OP_ENDLINE
   11          | expresion OP_ENDLINE
   12          | display OP_ENDLINE
   13          | get_action OP_ENDLINE

   14 declaracion_var: DIM OP_CORC list_var CL_COR AS OP_CORC list_types CL_COR

   15 list_var: ID
   16         | list_var OP_COMA ID

   17 type_var: INT_TYPE
   18         | REAL_TYPE
   19         | STRING_TYPE

   20 list_types: type_var
   21           | list_types OP_COMA type_var

   22 $@1: /* vacío */

   23 while: WHILE condicion_prima DO bloque $@1 ENDWHILE

   24 $@2: /* vacío */

   25 $@3: /* vacío */

   26 while_especial: WHILE ID $@2 IN exp_while DO bloque $@3 ENDWHILE

   27 exp_while: OP_CORC list_exp CL_COR

   28 list_exp: expresion
   29         | list_exp OP_COMA expresion

   30 $@4: /* vacío */

   31 if: IF OP_PAR condicion_prima CL_PAR bloque $@4 ENDIF

   32 $@5: /* vacío */

   33 $@6: /* vacío */

   34 if: IF OP_PAR condicion_prima CL_PAR bloque $@5 ELSE bloque $@6 ENDIF

   35 condicion_prima: condicion

   36 condicion: comparacion_simple
   37          | condicion_anidada
   38          | NOT comparacion_simple

   39 condicion_anidada: condicion OP_AND comparacion_simple
   40                  | condicion OP_OR comparacion_simple

   41 $@7: /* vacío */

   42 comparacion_simple: expresion $@7 op_comparacion expresion

   43 expresion: termino
   44          | expresion OP_SUM termino
   45          | expresion OP_MEN termino

   46 termino: termino_par
   47        | termino OP_MULT termino_par
   48        | termino OP_DIV termino_par

   49 termino_par: asig_val
   50            | OP_PAR expresion CL_PAR

   51 $@8: /* vacío */

   52 inicializacion_for: FOR ID OP_ASIG asig_val $@8 TO asig_val

   53 $@9: /* vacío */

   54 for: inicializacion_for pasos_for $@9 bloque NEXT ID

   55 $@10: /* vacío */

   56 for: inicializacion_for bloque $@10 NEXT ID

   57 pasos_for: OP_CORC expresion CL_COR

   58 asig_val: ID
   59         | INT_NUM
   60         | FLOAT_NUM
   61         | STRING_DEC

   62 asignacion: ID OP_ASIG expresion

   63 display: DISPLAY asig_val

   64 get_action: GET ID

   65 op_comparacion: OP_EQ
   66               | OP_GE
   67               | OP_GT
   68               | OP_LE
   69               | OP_LT
   70               | OP_DIST


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
OP_ASIG (258) 52 62
OP_GT (259) 67
OP_LT (260) 69
OP_GE (261) 66
OP_LE (262) 68
OP_EQ (263) 65
OP_SUM (264) 44
OP_MULT (265) 47
OP_MEN (266) 45
OP_DIV (267) 48
OP_OR (268) 40
OP_AND (269) 39
NOT (270) 38
OP_DIST (271) 70
OP_ENDLINE (272) 9 10 11 12 13
OP_COMA (273) 16 21 29
OP_PAR (274) 31 34 50
CL_PAR (275) 31 34 50
OP_KEY (276)
CL_KEY (277)
OP_CORC (278) 14 27 57
CL_COR (279) 14 27 57
WHILE (280) 23 26
IF (281) 31 34
ENDIF (282) 31 34
ELSE (283) 34
DIM (284) 14
AS (285) 14
IN (286) 26
DO (287) 23 26
ENDWHILE (288) 23 26
FOR (289) 52
TO (290) 52
NEXT (291) 54 56
INT_TYPE (292) 17
REAL_TYPE (293) 18
STRING_TYPE (294) 19
DIGITO (295)
CARACTER (296)
COMMENT (297)
STRING_DEC (298) 61
INT_NUM (299) 59
FLOAT_NUM (300) 60
DISPLAY (301) 63
GET (302) 64
ID (303) 15 16 26 52 54 56 58 62 64


No terminales con las reglas donde aparecen

$accept (49)
    en la izquierda: 0
programa (50)
    en la izquierda: 1, en la derecha: 0
main (51)
    en la izquierda: 2, en la derecha: 1
bloque (52)
    en la izquierda: 3 4, en la derecha: 2 4 23 26 31 34 54 56
sentencia (53)
    en la izquierda: 5 6 7 8 9 10 11 12 13, en la derecha: 3 4
declaracion_var (54)
    en la izquierda: 14, en la derecha: 10
list_var (55)
    en la izquierda: 15 16, en la derecha: 14 16
type_var (56)
    en la izquierda: 17 18 19, en la derecha: 20 21
list_types (57)
    en la izquierda: 20 21, en la derecha: 14 21
while (58)
    en la izquierda: 23, en la derecha: 5
$@1 (59)
    en la izquierda: 22, en la derecha: 23
while_especial (60)
    en la izquierda: 26, en la derecha: 6
$@2 (61)
    en la izquierda: 24, en la derecha: 26
$@3 (62)
    en la izquierda: 25, en la derecha: 26
exp_while (63)
    en la izquierda: 27, en la derecha: 26
list_exp (64)
    en la izquierda: 28 29, en la derecha: 27 29
if (65)
    en la izquierda: 31 34, en la derecha: 7
$@4 (66)
    en la izquierda: 30, en la derecha: 31
$@5 (67)
    en la izquierda: 32, en la derecha: 34
$@6 (68)
    en la izquierda: 33, en la derecha: 34
condicion_prima (69)
    en la izquierda: 35, en la derecha: 23 31 34
condicion (70)
    en la izquierda: 36 37 38, en la derecha: 35 39 40
condicion_anidada (71)
    en la izquierda: 39 40, en la derecha: 37
comparacion_simple (72)
    en la izquierda: 42, en la derecha: 36 38 39 40
$@7 (73)
    en la izquierda: 41, en la derecha: 42
expresion (74)
    en la izquierda: 43 44 45, en la derecha: 11 28 29 42 44 45 50
    57 62
termino (75)
    en la izquierda: 46 47 48, en la derecha: 43 44 45 47 48
termino_par (76)
    en la izquierda: 49 50, en la derecha: 46 47 48
inicializacion_for (77)
    en la izquierda: 52, en la derecha: 54 56
$@8 (78)
    en la izquierda: 51, en la derecha: 52
for (79)
    en la izquierda: 54 56, en la derecha: 8
$@9 (80)
    en la izquierda: 53, en la derecha: 54
$@10 (81)
    en la izquierda: 55, en la derecha: 56
pasos_for (82)
    en la izquierda: 57, en la derecha: 54
asig_val (83)
    en la izquierda: 58 59 60 61, en la derecha: 49 52 63
asignacion (84)
    en la izquierda: 62, en la derecha: 9
display (85)
    en la izquierda: 63, en la derecha: 12
get_action (86)
    en la izquierda: 64, en la derecha: 13
op_comparacion (87)
    en la izquierda: 65 66 67 68 69 70, en la derecha: 42


estado 0

    0 $accept: . programa $end

    OP_PAR      desplazar e ir al estado 1
    WHILE       desplazar e ir al estado 2
    IF          desplazar e ir al estado 3
    DIM         desplazar e ir al estado 4
    FOR         desplazar e ir al estado 5
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    DISPLAY     desplazar e ir al estado 9
    GET         desplazar e ir al estado 10
    ID          desplazar e ir al estado 11

    programa            ir al estado 12
    main                ir al estado 13
    bloque              ir al estado 14
    sentencia           ir al estado 15
    declaracion_var     ir al estado 16
    while               ir al estado 17
    while_especial      ir al estado 18
    if                  ir al estado 19
    expresion           ir al estado 20
    termino             ir al estado 21
    termino_par         ir al estado 22
    inicializacion_for  ir al estado 23
    for                 ir al estado 24
    asig_val            ir al estado 25
    asignacion          ir al estado 26
    display             ir al estado 27
    get_action          ir al estado 28


estado 1

   50 termino_par: OP_PAR . expresion CL_PAR

    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    expresion    ir al estado 30
    termino      ir al estado 21
    termino_par  ir al estado 22
    asig_val     ir al estado 25


estado 2

   23 while: WHILE . condicion_prima DO bloque $@1 ENDWHILE
   26 while_especial: WHILE . ID $@2 IN exp_while DO bloque $@3 ENDWHILE

    NOT         desplazar e ir al estado 31
    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 32

    condicion_prima     ir al estado 33
    condicion           ir al estado 34
    condicion_anidada   ir al estado 35
    comparacion_simple  ir al estado 36
    expresion           ir al estado 37
    termino             ir al estado 21
    termino_par         ir al estado 22
    asig_val            ir al estado 25


estado 3

   31 if: IF . OP_PAR condicion_prima CL_PAR bloque $@4 ENDIF
   34   | IF . OP_PAR condicion_prima CL_PAR bloque $@5 ELSE bloque $@6 ENDIF

    OP_PAR  desplazar e ir al estado 38


estado 4

   14 declaracion_var: DIM . OP_CORC list_var CL_COR AS OP_CORC list_types CL_COR

    OP_CORC  desplazar e ir al estado 39


estado 5

   52 inicializacion_for: FOR . ID OP_ASIG asig_val $@8 TO asig_val

    ID  desplazar e ir al estado 40


estado 6

   61 asig_val: STRING_DEC .

    $default  reduce usando la regla 61 (asig_val)


estado 7

   59 asig_val: INT_NUM .

    $default  reduce usando la regla 59 (asig_val)


estado 8

   60 asig_val: FLOAT_NUM .

    $default  reduce usando la regla 60 (asig_val)


estado 9

   63 display: DISPLAY . asig_val

    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    asig_val  ir al estado 41


estado 10

   64 get_action: GET . ID

    ID  desplazar e ir al estado 42


estado 11

   58 asig_val: ID .
   62 asignacion: ID . OP_ASIG expresion

    OP_ASIG  desplazar e ir al estado 43

    $default  reduce usando la regla 58 (asig_val)


estado 12

    0 $accept: programa . $end

    $end  desplazar e ir al estado 44


estado 13

    1 programa: main .

    $default  reduce usando la regla 1 (programa)


estado 14

    2 main: bloque .
    4 bloque: bloque . sentencia

    OP_PAR      desplazar e ir al estado 1
    WHILE       desplazar e ir al estado 2
    IF          desplazar e ir al estado 3
    DIM         desplazar e ir al estado 4
    FOR         desplazar e ir al estado 5
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    DISPLAY     desplazar e ir al estado 9
    GET         desplazar e ir al estado 10
    ID          desplazar e ir al estado 11

    $default  reduce usando la regla 2 (main)

    sentencia           ir al estado 45
    declaracion_var     ir al estado 16
    while               ir al estado 17
    while_especial      ir al estado 18
    if                  ir al estado 19
    expresion           ir al estado 20
    termino             ir al estado 21
    termino_par         ir al estado 22
    inicializacion_for  ir al estado 23
    for                 ir al estado 24
    asig_val            ir al estado 25
    asignacion          ir al estado 26
    display             ir al estado 27
    get_action          ir al estado 28


estado 15

    3 bloque: sentencia .

    $default  reduce usando la regla 3 (bloque)


estado 16

   10 sentencia: declaracion_var . OP_ENDLINE

    OP_ENDLINE  desplazar e ir al estado 46


estado 17

    5 sentencia: while .

    $default  reduce usando la regla 5 (sentencia)


estado 18

    6 sentencia: while_especial .

    $default  reduce usando la regla 6 (sentencia)


estado 19

    7 sentencia: if .

    $default  reduce usando la regla 7 (sentencia)


estado 20

   11 sentencia: expresion . OP_ENDLINE
   44 expresion: expresion . OP_SUM termino
   45          | expresion . OP_MEN termino

    OP_SUM      desplazar e ir al estado 47
    OP_MEN      desplazar e ir al estado 48
    OP_ENDLINE  desplazar e ir al estado 49


estado 21

   43 expresion: termino .
   47 termino: termino . OP_MULT termino_par
   48        | termino . OP_DIV termino_par

    OP_MULT  desplazar e ir al estado 50
    OP_DIV   desplazar e ir al estado 51

    $default  reduce usando la regla 43 (expresion)


estado 22

   46 termino: termino_par .

    $default  reduce usando la regla 46 (termino)


estado 23

   54 for: inicializacion_for . pasos_for $@9 bloque NEXT ID
   56    | inicializacion_for . bloque $@10 NEXT ID

    OP_PAR      desplazar e ir al estado 1
    OP_CORC     desplazar e ir al estado 52
    WHILE       desplazar e ir al estado 2
    IF          desplazar e ir al estado 3
    DIM         desplazar e ir al estado 4
    FOR         desplazar e ir al estado 5
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    DISPLAY     desplazar e ir al estado 9
    GET         desplazar e ir al estado 10
    ID          desplazar e ir al estado 11

    bloque              ir al estado 53
    sentencia           ir al estado 15
    declaracion_var     ir al estado 16
    while               ir al estado 17
    while_especial      ir al estado 18
    if                  ir al estado 19
    expresion           ir al estado 20
    termino             ir al estado 21
    termino_par         ir al estado 22
    inicializacion_for  ir al estado 23
    for                 ir al estado 24
    pasos_for           ir al estado 54
    asig_val            ir al estado 25
    asignacion          ir al estado 26
    display             ir al estado 27
    get_action          ir al estado 28


estado 24

    8 sentencia: for .

    $default  reduce usando la regla 8 (sentencia)


estado 25

   49 termino_par: asig_val .

    $default  reduce usando la regla 49 (termino_par)


estado 26

    9 sentencia: asignacion . OP_ENDLINE

    OP_ENDLINE  desplazar e ir al estado 55


estado 27

   12 sentencia: display . OP_ENDLINE

    OP_ENDLINE  desplazar e ir al estado 56


estado 28

   13 sentencia: get_action . OP_ENDLINE

    OP_ENDLINE  desplazar e ir al estado 57


estado 29

   58 asig_val: ID .

    $default  reduce usando la regla 58 (asig_val)


estado 30

   44 expresion: expresion . OP_SUM termino
   45          | expresion . OP_MEN termino
   50 termino_par: OP_PAR expresion . CL_PAR

    OP_SUM  desplazar e ir al estado 47
    OP_MEN  desplazar e ir al estado 48
    CL_PAR  desplazar e ir al estado 58


estado 31

   38 condicion: NOT . comparacion_simple

    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    comparacion_simple  ir al estado 59
    expresion           ir al estado 37
    termino             ir al estado 21
    termino_par         ir al estado 22
    asig_val            ir al estado 25


estado 32

   26 while_especial: WHILE ID . $@2 IN exp_while DO bloque $@3 ENDWHILE
   58 asig_val: ID .

    IN        reduce usando la regla 24 ($@2)
    $default  reduce usando la regla 58 (asig_val)

    $@2  ir al estado 60


estado 33

   23 while: WHILE condicion_prima . DO bloque $@1 ENDWHILE

    DO  desplazar e ir al estado 61


estado 34

   35 condicion_prima: condicion .
   39 condicion_anidada: condicion . OP_AND comparacion_simple
   40                  | condicion . OP_OR comparacion_simple

    OP_OR   desplazar e ir al estado 62
    OP_AND  desplazar e ir al estado 63

    $default  reduce usando la regla 35 (condicion_prima)


estado 35

   37 condicion: condicion_anidada .

    $default  reduce usando la regla 37 (condicion)


estado 36

   36 condicion: comparacion_simple .

    $default  reduce usando la regla 36 (condicion)


estado 37

   42 comparacion_simple: expresion . $@7 op_comparacion expresion
   44 expresion: expresion . OP_SUM termino
   45          | expresion . OP_MEN termino

    OP_SUM  desplazar e ir al estado 47
    OP_MEN  desplazar e ir al estado 48

    $default  reduce usando la regla 41 ($@7)

    $@7  ir al estado 64


estado 38

   31 if: IF OP_PAR . condicion_prima CL_PAR bloque $@4 ENDIF
   34   | IF OP_PAR . condicion_prima CL_PAR bloque $@5 ELSE bloque $@6 ENDIF

    NOT         desplazar e ir al estado 31
    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    condicion_prima     ir al estado 65
    condicion           ir al estado 34
    condicion_anidada   ir al estado 35
    comparacion_simple  ir al estado 36
    expresion           ir al estado 37
    termino             ir al estado 21
    termino_par         ir al estado 22
    asig_val            ir al estado 25


estado 39

   14 declaracion_var: DIM OP_CORC . list_var CL_COR AS OP_CORC list_types CL_COR

    ID  desplazar e ir al estado 66

    list_var  ir al estado 67


estado 40

   52 inicializacion_for: FOR ID . OP_ASIG asig_val $@8 TO asig_val

    OP_ASIG  desplazar e ir al estado 68


estado 41

   63 display: DISPLAY asig_val .

    $default  reduce usando la regla 63 (display)


estado 42

   64 get_action: GET ID .

    $default  reduce usando la regla 64 (get_action)


estado 43

   62 asignacion: ID OP_ASIG . expresion

    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    expresion    ir al estado 69
    termino      ir al estado 21
    termino_par  ir al estado 22
    asig_val     ir al estado 25


estado 44

    0 $accept: programa $end .

    $default  aceptar


estado 45

    4 bloque: bloque sentencia .

    $default  reduce usando la regla 4 (bloque)


estado 46

   10 sentencia: declaracion_var OP_ENDLINE .

    $default  reduce usando la regla 10 (sentencia)


estado 47

   44 expresion: expresion OP_SUM . termino

    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    termino      ir al estado 70
    termino_par  ir al estado 22
    asig_val     ir al estado 25


estado 48

   45 expresion: expresion OP_MEN . termino

    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    termino      ir al estado 71
    termino_par  ir al estado 22
    asig_val     ir al estado 25


estado 49

   11 sentencia: expresion OP_ENDLINE .

    $default  reduce usando la regla 11 (sentencia)


estado 50

   47 termino: termino OP_MULT . termino_par

    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    termino_par  ir al estado 72
    asig_val     ir al estado 25


estado 51

   48 termino: termino OP_DIV . termino_par

    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    termino_par  ir al estado 73
    asig_val     ir al estado 25


estado 52

   57 pasos_for: OP_CORC . expresion CL_COR

    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    expresion    ir al estado 74
    termino      ir al estado 21
    termino_par  ir al estado 22
    asig_val     ir al estado 25


estado 53

    4 bloque: bloque . sentencia
   56 for: inicializacion_for bloque . $@10 NEXT ID

    OP_PAR      desplazar e ir al estado 1
    WHILE       desplazar e ir al estado 2
    IF          desplazar e ir al estado 3
    DIM         desplazar e ir al estado 4
    FOR         desplazar e ir al estado 5
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    DISPLAY     desplazar e ir al estado 9
    GET         desplazar e ir al estado 10
    ID          desplazar e ir al estado 11

    $default  reduce usando la regla 55 ($@10)

    sentencia           ir al estado 45
    declaracion_var     ir al estado 16
    while               ir al estado 17
    while_especial      ir al estado 18
    if                  ir al estado 19
    expresion           ir al estado 20
    termino             ir al estado 21
    termino_par         ir al estado 22
    inicializacion_for  ir al estado 23
    for                 ir al estado 24
    $@10                ir al estado 75
    asig_val            ir al estado 25
    asignacion          ir al estado 26
    display             ir al estado 27
    get_action          ir al estado 28


estado 54

   54 for: inicializacion_for pasos_for . $@9 bloque NEXT ID

    $default  reduce usando la regla 53 ($@9)

    $@9  ir al estado 76


estado 55

    9 sentencia: asignacion OP_ENDLINE .

    $default  reduce usando la regla 9 (sentencia)


estado 56

   12 sentencia: display OP_ENDLINE .

    $default  reduce usando la regla 12 (sentencia)


estado 57

   13 sentencia: get_action OP_ENDLINE .

    $default  reduce usando la regla 13 (sentencia)


estado 58

   50 termino_par: OP_PAR expresion CL_PAR .

    $default  reduce usando la regla 50 (termino_par)


estado 59

   38 condicion: NOT comparacion_simple .

    $default  reduce usando la regla 38 (condicion)


estado 60

   26 while_especial: WHILE ID $@2 . IN exp_while DO bloque $@3 ENDWHILE

    IN  desplazar e ir al estado 77


estado 61

   23 while: WHILE condicion_prima DO . bloque $@1 ENDWHILE

    OP_PAR      desplazar e ir al estado 1
    WHILE       desplazar e ir al estado 2
    IF          desplazar e ir al estado 3
    DIM         desplazar e ir al estado 4
    FOR         desplazar e ir al estado 5
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    DISPLAY     desplazar e ir al estado 9
    GET         desplazar e ir al estado 10
    ID          desplazar e ir al estado 11

    bloque              ir al estado 78
    sentencia           ir al estado 15
    declaracion_var     ir al estado 16
    while               ir al estado 17
    while_especial      ir al estado 18
    if                  ir al estado 19
    expresion           ir al estado 20
    termino             ir al estado 21
    termino_par         ir al estado 22
    inicializacion_for  ir al estado 23
    for                 ir al estado 24
    asig_val            ir al estado 25
    asignacion          ir al estado 26
    display             ir al estado 27
    get_action          ir al estado 28


estado 62

   40 condicion_anidada: condicion OP_OR . comparacion_simple

    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    comparacion_simple  ir al estado 79
    expresion           ir al estado 37
    termino             ir al estado 21
    termino_par         ir al estado 22
    asig_val            ir al estado 25


estado 63

   39 condicion_anidada: condicion OP_AND . comparacion_simple

    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    comparacion_simple  ir al estado 80
    expresion           ir al estado 37
    termino             ir al estado 21
    termino_par         ir al estado 22
    asig_val            ir al estado 25


estado 64

   42 comparacion_simple: expresion $@7 . op_comparacion expresion

    OP_GT    desplazar e ir al estado 81
    OP_LT    desplazar e ir al estado 82
    OP_GE    desplazar e ir al estado 83
    OP_LE    desplazar e ir al estado 84
    OP_EQ    desplazar e ir al estado 85
    OP_DIST  desplazar e ir al estado 86

    op_comparacion  ir al estado 87


estado 65

   31 if: IF OP_PAR condicion_prima . CL_PAR bloque $@4 ENDIF
   34   | IF OP_PAR condicion_prima . CL_PAR bloque $@5 ELSE bloque $@6 ENDIF

    CL_PAR  desplazar e ir al estado 88


estado 66

   15 list_var: ID .

    $default  reduce usando la regla 15 (list_var)


estado 67

   14 declaracion_var: DIM OP_CORC list_var . CL_COR AS OP_CORC list_types CL_COR
   16 list_var: list_var . OP_COMA ID

    OP_COMA  desplazar e ir al estado 89
    CL_COR   desplazar e ir al estado 90


estado 68

   52 inicializacion_for: FOR ID OP_ASIG . asig_val $@8 TO asig_val

    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    asig_val  ir al estado 91


estado 69

   44 expresion: expresion . OP_SUM termino
   45          | expresion . OP_MEN termino
   62 asignacion: ID OP_ASIG expresion .

    OP_SUM  desplazar e ir al estado 47
    OP_MEN  desplazar e ir al estado 48

    $default  reduce usando la regla 62 (asignacion)


estado 70

   44 expresion: expresion OP_SUM termino .
   47 termino: termino . OP_MULT termino_par
   48        | termino . OP_DIV termino_par

    OP_MULT  desplazar e ir al estado 50
    OP_DIV   desplazar e ir al estado 51

    $default  reduce usando la regla 44 (expresion)


estado 71

   45 expresion: expresion OP_MEN termino .
   47 termino: termino . OP_MULT termino_par
   48        | termino . OP_DIV termino_par

    OP_MULT  desplazar e ir al estado 50
    OP_DIV   desplazar e ir al estado 51

    $default  reduce usando la regla 45 (expresion)


estado 72

   47 termino: termino OP_MULT termino_par .

    $default  reduce usando la regla 47 (termino)


estado 73

   48 termino: termino OP_DIV termino_par .

    $default  reduce usando la regla 48 (termino)


estado 74

   44 expresion: expresion . OP_SUM termino
   45          | expresion . OP_MEN termino
   57 pasos_for: OP_CORC expresion . CL_COR

    OP_SUM  desplazar e ir al estado 47
    OP_MEN  desplazar e ir al estado 48
    CL_COR  desplazar e ir al estado 92


estado 75

   56 for: inicializacion_for bloque $@10 . NEXT ID

    NEXT  desplazar e ir al estado 93


estado 76

   54 for: inicializacion_for pasos_for $@9 . bloque NEXT ID

    OP_PAR      desplazar e ir al estado 1
    WHILE       desplazar e ir al estado 2
    IF          desplazar e ir al estado 3
    DIM         desplazar e ir al estado 4
    FOR         desplazar e ir al estado 5
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    DISPLAY     desplazar e ir al estado 9
    GET         desplazar e ir al estado 10
    ID          desplazar e ir al estado 11

    bloque              ir al estado 94
    sentencia           ir al estado 15
    declaracion_var     ir al estado 16
    while               ir al estado 17
    while_especial      ir al estado 18
    if                  ir al estado 19
    expresion           ir al estado 20
    termino             ir al estado 21
    termino_par         ir al estado 22
    inicializacion_for  ir al estado 23
    for                 ir al estado 24
    asig_val            ir al estado 25
    asignacion          ir al estado 26
    display             ir al estado 27
    get_action          ir al estado 28


estado 77

   26 while_especial: WHILE ID $@2 IN . exp_while DO bloque $@3 ENDWHILE

    OP_CORC  desplazar e ir al estado 95

    exp_while  ir al estado 96


estado 78

    4 bloque: bloque . sentencia
   23 while: WHILE condicion_prima DO bloque . $@1 ENDWHILE

    OP_PAR      desplazar e ir al estado 1
    WHILE       desplazar e ir al estado 2
    IF          desplazar e ir al estado 3
    DIM         desplazar e ir al estado 4
    FOR         desplazar e ir al estado 5
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    DISPLAY     desplazar e ir al estado 9
    GET         desplazar e ir al estado 10
    ID          desplazar e ir al estado 11

    $default  reduce usando la regla 22 ($@1)

    sentencia           ir al estado 45
    declaracion_var     ir al estado 16
    while               ir al estado 17
    $@1                 ir al estado 97
    while_especial      ir al estado 18
    if                  ir al estado 19
    expresion           ir al estado 20
    termino             ir al estado 21
    termino_par         ir al estado 22
    inicializacion_for  ir al estado 23
    for                 ir al estado 24
    asig_val            ir al estado 25
    asignacion          ir al estado 26
    display             ir al estado 27
    get_action          ir al estado 28


estado 79

   40 condicion_anidada: condicion OP_OR comparacion_simple .

    $default  reduce usando la regla 40 (condicion_anidada)


estado 80

   39 condicion_anidada: condicion OP_AND comparacion_simple .

    $default  reduce usando la regla 39 (condicion_anidada)


estado 81

   67 op_comparacion: OP_GT .

    $default  reduce usando la regla 67 (op_comparacion)


estado 82

   69 op_comparacion: OP_LT .

    $default  reduce usando la regla 69 (op_comparacion)


estado 83

   66 op_comparacion: OP_GE .

    $default  reduce usando la regla 66 (op_comparacion)


estado 84

   68 op_comparacion: OP_LE .

    $default  reduce usando la regla 68 (op_comparacion)


estado 85

   65 op_comparacion: OP_EQ .

    $default  reduce usando la regla 65 (op_comparacion)


estado 86

   70 op_comparacion: OP_DIST .

    $default  reduce usando la regla 70 (op_comparacion)


estado 87

   42 comparacion_simple: expresion $@7 op_comparacion . expresion

    OP_PAR      desplazar e ir al estado 1
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    ID          desplazar e ir al estado 29

    expresion    ir al estado 98
    termino      ir al estado 21
    termino_par  ir al estado 22
    asig_val     ir al estado 25


estado 88

   31 if: IF OP_PAR condicion_prima CL_PAR . bloque $@4 ENDIF
   34   | IF OP_PAR condicion_prima CL_PAR . bloque $@5 ELSE bloque $@6 ENDIF

    OP_PAR      desplazar e ir al estado 1
    WHILE       desplazar e ir al estado 2
    IF          desplazar e ir al estado 3
    DIM         desplazar e ir al estado 4
    FOR         desplazar e ir al estado 5
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    DISPLAY     desplazar e ir al estado 9
    GET         desplazar e ir al estado 10
    ID          desplazar e ir al estado 11

    bloque              ir al estado 99
    sentencia           ir al estado 15
    declaracion_var     ir al estado 16
    while               ir al estado 17
    while_especial      ir al estado 18
    if                  ir al estado 19
    expresion           ir al estado 20
    termino             ir al estado 21
    termino_par         ir al estado 22
    inicializacion_for  ir al estado 23
    for                 ir al estado 24
    asig_val            ir al estado 25
    asignacion          ir al estado 26
    display             ir al estado 27
    get_action          ir al estado 28


estado 89

   16 list_var: list_var OP_COMA . ID

    ID  desplazar e ir al estado 100


estado 90

   14 declaracion_var: DIM OP_CORC list_var CL_COR . AS OP_CORC list_types CL_COR

    AS  desplazar e ir al estado 101


estado 91

   52 inicializacion_for: FOR ID OP_ASIG asig_val . $@8 TO asig_val

    $default  reduce usando la regla 51 ($@8)

    $@8  ir al estado 102


estado 92

   57 pasos_for: OP_CORC expresion CL_COR .

    $default  reduce usando la regla 57 (pasos_for)


estado 93

   56 for: inicializacion_for bloque $@10 NEXT . ID

    ID  desplazar e ir al estado 103


estado 94

    4 bloque: bloque . sentencia
   54 for: inicializacion_for pasos_for $@9 bloque . NEXT ID

    OP_PAR      desplazar e ir al estado 1
    WHILE       desplazar e ir al estado 2
    IF          desplazar e ir al estado 3
    DIM         desplazar e ir al estado 4
    FOR         desplazar e ir al estado 5
    NEXT        desplazar e ir al estado 104
    STRING_DEC  desplazar e ir al estado 6
    INT_NUM     desplazar e ir al estado 7
    FLOAT_NUM   desplazar e ir al estado 8
    DISPLAY     desplazar e ir al estado 9
    GET         desplazar e ir al estado 10
    ID          desplazar e ir al estado 11
